# tz-pico

./: CMakeLists.txt
linker/: ldscript.ld
src/: main.c  startup.c
